[package]
name = "coreminer"
version = "0.2.2"
rust-version = "1.78.0"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>", "Marco Ludwig"]
license = "MIT"
description = "A debugger which can be used to debug programs that do not want to be debugged"
readme = "README.md"
homepage = "https://github.com/debugger-bs/coreminer"
repository = "https://github.com/debugger-bs/coreminer"
keywords = ["debugger", "ptrace", "dwarf", "disassembler", "debugging"]
categories = [
	"development-tools",
	"development-tools::debugging",
	"command-line-utilities",
	"memory-management",
]

[package.metadata."docs.rs"]
all-features = true

[dependencies]
clap = { version = "4.5.27", features = ["derive"], optional = true }
dialoguer = { version = "0.11.0", features = ["history"], optional = true }
gimli = { version = "0.31.1", default-features = true, features = [
	"std",
	"read",
] }
human-panic = { version = "2.0.2", optional = true }
iced-x86 = "1.21.0"
nix = { version = "0.29.0", features = [
	"personality",
	"process",
	"ptrace",
	"signal",
] }
object = "0.36.7"
proc-maps = "0.4.0"
rustc-demangle = "0.1.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unwind = { version = "0.4.2", features = ["ptrace"] }

[features]
default = ["binaries"]
binaries = ["cli", "cmserve"]
cli = ["dep:clap", "dep:dialoguer", "dep:human-panic"]
cmserve = ["dep:clap", "dep:human-panic"]

[[bin]]
name = "cm"
required-features = ["cli"]
path = "src/bins/cm.rs"

[[bin]]
name = "cmserve"
required-features = ["cmserve"]
path = "src/bins/cmserve.rs"
